force-app/main/default/objects/brideas_Flag__c/brideas_Flag__c.object-meta.xml
<CustomObject>
    <label>Ideas Flag</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Flag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>