force-app/main/default/objects/brideas_Flag__c/fields/IdeaId__c.field-meta.xml
<CustomField>
    <fullName>IdeaId__c</fullName>
    <label>Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>