force-app/main/default/objects/brideas_Flag__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>