force-app/main/default/objects/brideas_Flag__c/listViews/All_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Ideas</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All_Ideas</label>
    <language>en_US</language>
</ListView>